# remotexr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  package.json  pnpm-lock.yaml  server.html
src/frontend/client/: index.ts  shader.ts
src/frontend/server/: index.ts
src/frontend/shared/: p2p.ts
src/native/ovrplugin/: CMakeLists.txt  driver.vrdrivermanifest  main.cpp
